--- a/views/landing.pug
+++ b/views/landing.pug
@@ -18,4 +18,4 @@ block content
         p Question 3 Answer:
             input(type='text' name='quesitonThree')
         p
-            input(type='submit' value='Submit')
+            input(type='submit' value='poggers')
