--- a/views/landing.pug
+++ b/views/landing.pug
@@ -12,10 +12,22 @@ block content
         p Age:
             input(type='text' name='age')
         p Question 1 Answer:
-            input(type='text' name='questionOne')
+            p(name='questionOneText')
+            input(type='radio' name='questionOneA1')
+            input(type='radio' name='questionOneA2')
+            input(type='radio' name='questionOneA3')
+            input(type='radio' name='questionOneA4')
         p Question 2 Answer:
-            input(type='text' name='quesitonTwo')
+            p(name='questionTwoText')
+            input(type='radio' name='quesitonTwoA1')
+            input(type='radio' name='quesitonTwoA2')
+            input(type='radio' name='quesitonTwoA3')
+            input(type='radio' name='quesitonTwoA4')
         p Question 3 Answer:
-            input(type='text' name='quesitonThree')
+            p(name='questionThreeText')
+            input(type='radio' name='quesitonThreeA1')
+            input(type='radio' name='quesitonThreeA2')
+            input(type='radio' name='quesitonThreeA3')
+            input(type='radio' name='quesitonThreeA4')
         p
             input(type='submit' value='poggers')
