--- a/views/landing.pug
+++ b/views/landing.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     h3=title
-    form(method='POST' action='/submitted')
+    form(method='POST' action='/')
         p Username:
             input(type='text' name='username')
         p Password:
