--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,7 @@ extends layout
 block content 
     p(name='visitedText')
     p sup bois, we fixin' this rn lol
+
+    a(href='/login') Login 
+    br
+    a(href='/create') New User
