update3d landing with questions

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -11,23 +11,23 @@ block content
             input(type='text' name='email')
         p Age:
             input(type='text' name='age')
-        p Question 1 Answer:
+        p Question 1: Which degree is the best?
             p(name='questionOneText')
-            input(type='radio' name='questionOneA1')
-            input(type='radio' name='questionOneA2')
-            input(type='radio' name='questionOneA3')
-            input(type='radio' name='questionOneA4')
-        p Question 2 Answer:
+            input(type='radio' name='questionOneA1' value='Web')
+            input(type='radio' name='questionOneA2' value='Game')
+            input(type='radio' name='questionOneA3' value='Why does this matter?')
+            input(type='radio' name='questionOneA4' value='Who cares, let people be people')
+        p Question 2: Who is the president of Neumont?
             p(name='questionTwoText')
-            input(type='radio' name='quesitonTwoA1')
-            input(type='radio' name='quesitonTwoA2')
-            input(type='radio' name='quesitonTwoA3')
-            input(type='radio' name='quesitonTwoA4')
-        p Question 3 Answer:
+            input(type='radio' name='quesitonTwoA1' value='Harrison')
+            input(type='radio' name='quesitonTwoA2' value='Deardall')
+            input(type='radio' name='quesitonTwoA3' value='Reed')
+            input(type='radio' name='quesitonTwoA4' value='Marshall')
+        p Question 3: Who is the best teacher?
             p(name='questionThreeText')
-            input(type='radio' name='quesitonThreeA1')
-            input(type='radio' name='quesitonThreeA2')
-            input(type='radio' name='quesitonThreeA3')
-            input(type='radio' name='quesitonThreeA4')
+            input(type='radio' name='quesitonThreeA1' value='Professor Beatty')
+            input(type='radio' name='quesitonThreeA2' value='Professor Maple')
+            input(type='radio' name='quesitonThreeA3' value='Professor Cantera')
+            input(type='radio' name='quesitonThreeA4' value='Dr Kohler')
         p
-            input(type='submit' value='poggers')
+            input(type='submit' value='Submit')
