save model to database

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -10,7 +10,7 @@ block content
         p Email:
             input(type='text' name='email')
         p Age:
-            input(type='text' name='age')
+            input(type='number' name='age')
         p Question 1: Which degree is the best?
             p(name='questionOneText')
             input(type='radio' id='Web' name='questionOne' value='Web')
@@ -27,27 +27,27 @@ block content
             br
         p Question 2: Who is the president of Neumont?
             p(name='questionTwoText')
-            input(type='radio' id="harrison" name='quesitonTwo' value='Harrison')
+            input(type='radio' id="harrison" name='questionTwo' value='Harrison')
             label(for="harrison") Harrison
             br
-            input(type='radio' id="beardall" name='quesitonTwo' value='Beardall')
+            input(type='radio' id="beardall" name='questionTwo' value='Beardall')
             label(for="beardall") Beardall
             br
-            input(type='radio' id="reed" name='quesitonTwo' value='Reed')
+            input(type='radio' id="reed" name='questionTwo' value='Reed')
             label(for="reed") Reed
             br
-            input(type='radio' id="marshall" name='quesitonTwo' value='Marshall')
+            input(type='radio' id="marshall" name='questionTwo' value='Marshall')
             label(for="marshall") Marshall
             br
         p Question 3: Who is the best teacher?
             p(name='questionThreeText')
-            input(type='radio' id="beatty" name='quesitonThree' value='Professor Beatty')
+            input(type='radio' id="beatty" name='questionThree' value='Professor Beatty')
             label(for="beatty") Professor Beatty
             br
-            input(type='radio' id="maple" name='quesitonThree' value='Professor Maple')
+            input(type='radio' id="maple" name='questionThree' value='Professor Maple')
             label(for="maple") Professor Maple
             br
-            input(type='radio' id="cantera" name='quesitonThree' value='Professor Cantera')
+            input(type='radio' id="cantera" name='questionThree' value='Professor Cantera')
             label(for="cantera") Professor Cantera
             br
             input(type='radio' id="kohler" name='quesitonThree' value='Dr Kohler')
