--- a/views/login.pug
+++ b/views/login.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     head
     body
-        form(method='post' action='/landing.pug')
+        form(method='post' action='/edit')
             p Username (user):
                 br
                 input(type='text' name='username')
