--- a/views/index.pug
+++ b/views/index.pug
@@ -8,3 +8,6 @@ block content
     a(href='/login') Login 
     br
     a(href='/landing') New User
+
+    canvas(id='qGraph')
+    p Question 1 Graph 
