index and route start

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,5 @@ block content
     a(href='/login') Login 
     br
     a(href='/landing') New User
-
-    canvas(id='qGraph')
-    p Question 1 Graph 
+    br
+    a(href='../front-end/index.html') Look at the Stats!
