--- a/views/index.pug
+++ b/views/index.pug
@@ -9,4 +9,4 @@ block content
     br
     a(href='/landing') New User
     br
-    a(href='../front-end/index.html') Look at the Stats!
+    a(href='index.html') Look at the Stats!
