--- a/views/landing.pug
+++ b/views/landing.pug
@@ -50,7 +50,7 @@ block content
             input(type='radio' id="cantera" name='questionThree' value='Professor Cantera')
             label(for="cantera") Professor Cantera
             br
-            input(type='radio' id="kohler" name='quesitonThree' value='Dr Kohler')
+            input(type='radio' id="kohler" name='questionThree' value='Dr Kohler')
             label(for="kohler") Dr Kohler
             br
         p
